# ins-gps-ekf

./: CMakeLists.txt  README.md
include/: Core.h  EKF.h  ErrorState.h  ErrorStateCovariance.h  NavigationState.h  System.h  Tracking.h  Utils.h
include/KittiDatasetTools/: KittiDatasetParser.h
src/: EKF.cpp  ErrorState.cpp  ErrorStateCovariance.cpp  NavigationState.cpp  System.cpp  Tracking.cpp
src/KittiDatasetTools/: KittiDatasetParser.cpp
tests/: kitti_dataset_tools_test.cpp  simple_test.cpp
